# sphera

./: .env  .env.example  .gitignore  HISOBOT.md  Makefile  RAILWAY_DEPLOY.md  README.md  build.sh  docker-compose.yml  icecast.local.xml  icecast.xml  railway.toml  render.env  render.yaml  requirements.txt  run-all.sh  run-dev.sh  run_backend.py  run_bot.py  start-backend.sh  start.sh  stop-dev.sh  stop.sh
.github/workflows/: ci.yml
.logs/: current_url.txt
.pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
.pgdata/global/: 1261  (+12 more)
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/routers/: admin.py  auth.py  chat.py  cities.py  favorites.py  messages.py  news.py  radio.py  stats.py  users.py
backend/app/core/: config.py  constants.py  database.py  dependencies.py  internal_auth.py  logging_config.py  middleware.py  models.py  rate_limit.py  redis.py  state.py  tasks.py  ws_manager.py
backend/app/db/: schema.sql
backend/app/host/: main.py
backend/app/services/: aggregator.py  assistant.py  gemini.py  points.py  psychotype.py  whisper_stt.py
backend/static/: index.html
backend/static/assets/: index-A_1U94cV.js  index-D4TmUvuz.css  index-DlQOVkWG.js  index-DwgxqW5k.js  index-FV76xA8t.css  index-OhPl-NXZ.js  index-iDKGpg9h.css
backend/tests/: conftest.py  test_api.py
bot/: Dockerfile  bot.py
frontend/: .env.example  .gitignore  IDEA.md  package-lock.json  package.json  vite.config.ts
frontend-vanilla-backup/: app.js  style.css
miniapp/: admin.js  entry.js  i18n.js  index.html  radio.html
radio-api/: database.py  dependencies.py  main.py  models.py  state.py  ws_manager.py
radio-host/: main.py
telegram-bot/: bot.py
(+466 files in other folders)
