[tool.poetry]
name = "sphera-backend"
version = "1.0.0"
description = "Radio AI — multitilli interaktiv AI-radio platformasi"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
asyncpg = "^0.29.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
httpx = "^0.27.0"
google-generativeai = "^0.7.0"
edge-tts = "^6.1.10"
faster-whisper = "^1.0.3"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
