[tool.poetry]
name = "sphera-backend"
version = "2.0.0"
description = "Radio AI — multitilli interaktiv AI-radio platformasi (production)"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
asyncpg = "^0.29.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
httpx = "^0.27.0"
google-generativeai = "^0.7.0"
edge-tts = "^6.1.10"
faster-whisper = "^1.0.3"
python-multipart = "^0.0.9"
pydantic-settings = "^2.3.0"
redis = { version = "^5.0.0", extras = ["hiredis"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.5.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
